languages/bevy_mod_scripting_lua_derive/tests/fail/references/non-proxy-reference.rs
use bevy::prelude::*;
use bevy_mod_scripting::api::*;

#[derive(ScriptProxy, Reflect)]
#[proxy(languages("lua"), derive(Clone))]
#[functions[
    #[lua(Function)]
    fn fn_returning_some_string(some_str: &str) -> String;

]]
#[derive(Clone)]
pub struct MyStruct {
    some_string: String,
    me_vec: Vec<usize>,
}

impl MyStruct {
    pub fn fn_returning_some_string(some_str: &str) -> String {
        some_str.to_owned()
    }
}

pub fn main() {}
